<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">




        <TextView
            android:id="@+id/arabicLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="92dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/ubuntu_bold_italic"
            android:gravity="center_horizontal"
            android:text="@string/arabic_lang"
            android:textColor="@color/blue4"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/englishLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:layout_margin="10dp"
            android:textColor="@color/blue6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/ubuntu_bold_italic"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textSize="14sp"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_170sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/swap"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/importFileBtn"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_30sdp"
            android:paddingEnd="@dimen/_30sdp"
            android:background="@drawable/bg_grey"
            android:elevation="@dimen/_10sdp"
            android:text="@string/import_file"
            android:fontFamily="@font/ubuntu_bold"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lottie_view" />




              <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/HomeBtn"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_blue"
            android:elevation="@dimen/_10sdp"
            android:text="@string/continue_tracking"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingStart="@dimen/_5sdp"
            android:fontFamily="@font/ubuntu_bold"

            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/importFileBtn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearBtn"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_grey"
            android:elevation="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/clear_old_data"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="@font/ubuntu_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/HomeBtn" />

        <!--    <androidx.appcompat.widget.AppCompatButton-->
        <!--        android:id="@+id/aboutBtn"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginTop="8dp"-->
        <!--        android:background="@drawable/use_data_btn_background"-->
        <!--        android:elevation="@dimen/_10sdp"-->

        <!--        android:paddingStart="@dimen/_30sdp"-->
        <!--        android:paddingTop="@dimen/_5sdp"-->
        <!--        android:paddingEnd="@dimen/_30sdp"-->
        <!--        android:paddingBottom="@dimen/_5sdp"-->
        <!--        android:text="About Win"-->
        <!--        android:textAllCaps="false"-->
        <!--        android:textColor="@color/colorWhite"-->
        <!--        android:textSize="@dimen/_15ssp"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintHorizontal_bias="0.497"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@id/deleteBtn" />-->


        <TextView
            android:id="@+id/aboutWinTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="132dp"
            android:fontFamily="@font/ubuntu_bold_italic"
            android:gravity="center_horizontal"
            android:text="@string/u00a9_about_win"
            android:textColor="@color/blue4"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

